--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body{
     content: '';
-    background-image: url(https://media.istockphoto.com/id/636761588/photo/used-brushes-on-an-artists-palette-of-colorful-oil-paint.jpg?s=612x612&w=0&k=20&c=38YQxVJVWnNfvGtlb7AXMx_ItyHZMEdmWenNkWNQ91g=);
+    background-image: url(https://png.pngtree.com/thumb_back/fh260/background/20230711/pngtree-mobile-phone-scanning-qr-code-with-3d-rendered-barcode-process-illustration-image_3832103.jpg);
     background-repeat: no-repeat;
     background-size:100% 700px;
     opacity: 0.9;
